<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="20dp"
    tools:context=".ui.authorization.login.LoginFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/mainContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/helloContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="78dp"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                style="@style/main_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hello" />

            <TextView
                style="@style/description_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="8dp"
                android:text="@string/login_description" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/baseContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/helloContainer">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/edit_text_main"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/emailET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:background="@drawable/edit_text_background"
                    android:hint="xyz@gmail.com"
                    android:paddingLeft="14dp"
                    android:paddingTop="16dp"
                    android:paddingBottom="16dp"
                    android:textColor="@color/text"
                    android:textColorHint="@color/hint" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="26dp"
                android:orientation="vertical">

                <TextView
                    style="@style/edit_text_main"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/password" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    app:boxStrokeWidth="0dp"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/passwordET"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:background="@drawable/edit_text_background"
                        android:hint="••••••••"
                        android:inputType="textPassword"
                        android:paddingLeft="14dp"
                        android:paddingTop="16dp"
                        android:paddingBottom="16dp"
                        android:textColor="@color/text"
                        android:textColorHint="@color/hint" />

                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/recoverBt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <Space
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <TextView
                    style="@style/edit_text_main"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:lineHeight="16dp"
                    android:text="@string/password"
                    android:textSize="12sp" />
            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/loginBt"
                style="@style/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:outlineProvider="none"
                android:text="@string/login" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/createUserBt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/baseContainer">

            <TextView
                style="@style/description_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:lineHeight="16.38dp"
                android:text="@string/first_time"
                android:textColor="@color/hint"
                android:textSize="16sp" />

            <TextView
                style="@style/description_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="1dp"
                android:lineHeight="16.38dp"
                android:text="@string/createUser"
                android:textColor="@color/text"
                android:textSize="16sp" />
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>