<resources>
    <string name="app_name">Matule_App_sessions</string>
    <string name="hello">Привет!</string>
    <string name="login_description">Заполните Свои данные или продолжите через социальные медиа</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Войти</string>
    <string name="first_time">Вы впервые?</string>
    <string name="createUser">Создать пользователя</string>
    <string name="title">title</string>
    <string name="back">Отмена</string>
    <string name="ok">Ok</string>
    <string name="start">Начать</string>
...
